# 23Z-wasm-chess

./: .dockerignore  .gitignore  .prettierrc  Dockerfile  README.md  package-lock.json  package.json  vite.config.ts
chess-app/: Cargo.toml
chess-app/src/: game.rs  main.rs
chess-app/src/game/: chessfield.rs
chess-app/src/game/chessfield/: chessman.rs
chess-app/src/game/chessfield/chessman/: basic.rs
chess_app/: Cargo.toml
chess_app/src/: game.rs  main.rs
chess_app/src/game/chessfield/: chessman.rs
chess_app/src/game/chessfield/chessman/: basic.rs
chess_app/tests/: integration_test.rs
src/lib/: index.ts
src/routes/: +page.server.ts  +page.svelte
src/routes/game/: +page.svelte  Field.svelte  PromotionChoice.svelte  PromotionSelector.svelte  field.svelte
wasm/: Cargo.toml
wasm/src/: basic.rs  chessfield.rs  chessman.rs  chesspiece.rs  field.rs  game.rs  gamestate.rs  lib.rs  main.rs  move.rs  piece.rs  player.rs  position.rs  utils.rs
wasm/src/chessfield/chessman/: basic.rs
wasm/tests/: integration_test.rs
